# clay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  run_benchmark.py  run_hi3dgen.py  run_hunyuan.py  run_material.py  run_text.py  run_texture.py
benchmarks/assets/: README.md
benchmarks/cases/: default.json
benchmarks/prompts/: image-prompts.md
benchmarks/results/: MODEL_RUNTIMES.md  RESULTS.md  smoke-result.json  suite-results.json
benchmarks/results/samples/: chair-20k.glb  chair-20k.html  chair-5k.glb  chair-5k.html  chair-60k.glb  chair-60k.html  character.glb  character.html  pot.glb  pot.html  prop.glb  prop.html
benchmarks/results/text/: matatu.glb
benchmarks/results/texture/: pot_textured.glb
config/: config.example.toml
src/clay/: __init__.py  cli.py  collision.py  config.py  generator.py  lods.py  material.py  pipeline.py  postprocess.py  preview.py  schemas.py  texture.py  variations.py
src/clay/agent/: __init__.py  loop.py  nvidia.py
src/clay/blender/: __init__.py  engine.py  ops.py
src/clay/deploy/: __init__.py  base.py  cloud.py  modal_deploy.py
src/clay/gpu_backend/: __init__.py  image.py  (+3 more)
tests/: test_agent.py  test_bake.py  test_blender.py  test_cli.py  test_collision.py  test_config.py  test_deploy.py  test_generator.py  test_gpu_backend.py  test_lods.py  test_material.py  test_mcp.py  test_pipeline.py  test_postprocess.py  test_providers.py  test_retopo.py  test_rig.py  test_smoke.py  test_texture.py  test_tools.py  test_variations.py
(+18 files in other folders)
