[project]
name = "clay"
version = "0.2.0"
description = "OpenX Clay — open-source image/text → game-ready 3D assets. Meshy/Rodin, but yours."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "OpenX-Inc" }]

# Orchestrator core — light. The heavy 3D/GPU deps live in optional extras so
# the CLI + agent + provider layer install fast and run headless anywhere.
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "typer>=0.15.0",
    "rich>=14.0.0",
    "tomli>=2.2.0; python_version < '3.11'",
    "fastapi>=0.115.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
# Game-ready post-processing (CPU): remesh/decimate, UV unwrap, GLB/OBJ export.
postprocess = [
    "trimesh>=4.5.0",
    "numpy>=1.26.0",
    "xatlas>=0.0.9",
    "fast-simplification>=0.1.7",
    "pygltflib>=1.16.0",
    "pillow>=10.0.0",
]
# GPU backend / model runtime (TRELLIS-2, Hunyuan3D, Hi3DGen).
gpu = [
    "torch>=2.6.0",
    "diffusers>=0.33.0",
    "transformers>=4.50.0",
    "accelerate>=1.5.0",
]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
]

[project.scripts]
clay = "clay.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clay"]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
